// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useRouter should apply a hook for useHistory that emulates history but allows dispatching platform navigation updates if available: dispatch platform navigation 1`] = `
[
  [
    {
      "meta": {
        "appName": undefined,
        "id": "rhel",
        "secondaryNav": undefined,
      },
      "payload": Promise {},
      "type": "PLATFORM_SET_NAV",
    },
  ],
]
`;

exports[`useRouter should apply a hook for useHistory that emulates history but allows dispatching platform navigation updates if available: history push 1`] = `
[
  [
    "/lorem/ipsum",
    undefined,
  ],
]
`;

exports[`useRouter should apply a hook for useHistory: dispatch platform navigation 1`] = `[]`;

exports[`useRouter should apply a hook for useHistory: history push 1`] = `
[
  [
    "/lorem/ipsum",
    undefined,
  ],
  [
    "/rhel",
    undefined,
  ],
]
`;

exports[`useRouter should return specific properties: specific properties 1`] = `
{
  "useHistory": [Function],
  "useLocation": [Function],
  "useParams": [Function],
  "useRouteDetail": [Function],
  "useRouteMatch": [Function],
}
`;
